--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Semantic</title>
   </head>
   <body>
     <div id="root"></div>
